fix (styles): gap between fields

--- a/src/components/FormAuth/FormAuth.module.css
+++ b/src/components/FormAuth/FormAuth.module.css
@@ -32,9 +32,13 @@
 .fields {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 16px;
 
   margin-bottom: 32px;
+
+  @media only screen and (min-width: 768px) {
+    gap: 20px;
+  }
 }
 
 .info {
